# Local_App

./: .gitignore  AGENTS.md  Android.md  README.md  commits_since_0.1.1_2026-05-17.txt  commits_since_cbde624.txt  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.lingma/rules/: reply.md
docs/: 0.2.3_change.md  Settings保存重绘.md  coastline_algorithm_redesign.md  coastline_v2_explained.html  dock_panel_child_page_guide.md  map_shape_editor_backend_mvp.md  mobile_markdown_cursor_offset_fix.md  plugin_system_guide.md  prompt_README.md  semantic_map_generation_design.md  tauri_android_dev_debugging.md  tauri_deterministic_layout_engine.md  ui_style_unification_plan.md
public/file_icon/: README.md
scripts/: android-dev.cjs  build-ocr-sidecar.ps1  build-windows-signed.ps1
src/: App.css  App.tsx  apis.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  common-controls.manifest  tauri.conf.json
src-tauri/capabilities/: default.json  desktop-lifecycle.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: gen_license.cjs  installer-hooks.nsh  license.rtf
src-tauri/resources/templates/context/: README.md
src-tauri/resources/templates/contradiction/: README.md  detection_prompt.tera
src-tauri/resources/templates/formats/: projects.tera  relations.tera
src-tauri/resources/templates/sense/: README.md  app_system.tera  character_system.tera  contradiction_system.tera  world_check_system.tera
src-tauri/resources/templates/world_check/: contradiction_prompt.tera  entry_alignment_prompt.tera  publication_risk_prompt.tera
src-tauri/sidecars/ocr/: flowcloudai_ocr_sidecar.py
src-tauri/src/: android_file_import.rs  api_error.rs  apis.rs  auto_backup.rs  lib.rs  prompt.rs  secure.rs  settings.rs  state.rs  template.rs
src-tauri/src/ai_services/: artifact_parser.rs  context_builders.rs  contradiction_loader.rs  mod.rs  world_check.rs
src-tauri/src/apis/: ai_character.rs  ai_client.rs  ai_contradiction.rs  ai_summary.rs  ai_world_check.rs  app_settings.rs  document_context.rs  feedback.rs  layout.rs  map.rs  map_persistence.rs  mod.rs  ocr.rs  plugins.rs  templates.rs  webview_control.rs  worldflow.rs
src-tauri/src/apis/ai_client/: common.rs  confirmations.rs  conversations.rs  media.rs  mod.rs  plugins.rs  sessions.rs  task_context.rs  tools.rs  usage.rs
src-tauri/src/apis/plugins/: common.rs  local.rs  market.rs  market_client.rs  mod.rs  remote.rs
src-tauri/src/apis/worldflow/: categories.rs  common.rs  entries.rs  entry_types.rs  fcworld.rs  ideas.rs  images.rs  links.rs  mod.rs  project_settings.rs  projects.rs  relations.rs  snapshots.rs  snapshots_android.rs  system.rs  tags.rs
src-tauri/src/apis/worldflow/fcworld/: import.rs
src-tauri/src/document_context/: chunking.rs  mod.rs  model.rs  parser.rs  storage.rs
src-tauri/src/document_context/providers/: mod.rs  office_oxide.rs  pdf_extract.rs  plain_text.rs
src-tauri/src/layout/: cache.rs  cluster.rs  cluster.rs.backup  component_graph.rs  constants.rs  engine.rs  engine.rs.backup  math.rs  mod.rs  mod.rs.backup  params.rs  prepare.rs  topology.rs  types.rs
src-tauri/src/map/: coastline.rs  coastline_v2.rs  color.rs  constants.rs  geometry.rs  mod.rs  service.rs  types.rs
src-tauri/src/reports/: contradiction_report.rs  mod.rs  world_check_report.rs
src-tauri/src/senses/: app_sense.rs  character_sense.rs  contradiction_sense.rs  mod.rs  world_check_sense.rs
src-tauri/src/tools/: category_tools.rs  confirm.rs  edit_tools.rs  entry_tools.rs  mod.rs  project_tools.rs  registry.rs  state.rs  web_tools.rs
src-tauri/tests/: coastline_v2.rs  web_tools.rs
src/Components/: Button.css  Button.tsx  main.tsx
src/api/: ai_client.ts  api_usage.ts  app_settings.ts  assets.ts  base.ts  contradiction.ts  dialog.ts  document_context.ts  error.ts  events.ts  feedback.ts  idea_note.ts  index.ts  index.tsx  layout.ts  map.ts  ocr.ts  opener.ts  platform.ts  plugins.ts  snapshot.ts  templates.ts  webview.ts  world_check.ts  worldflow.ts
src/app/desktop/: DesktopApp.tsx
src/app/index/: AppRoot.tsx  AppShell.tsx
src/app/mobile/: MobileApp.css  MobileApp.tsx  MobileNav.css  MobileNav.tsx  useMobileSideDrawerGesture.ts  usePageStack.ts
src/components/: AI.css  AI.tsx  AIChatContent.css  AIChatContent.tsx  AIImageGenerator.css  AIImageGenerator.tsx  AITtsDemo.tsx  AiConfirmModal.css  AiConfirmModal.tsx  EntryCreator.css  EntryCreator.tsx  EntryEditModal.tsx  EntryEditor.css  EntryEditor.tsx  EntryEditorMetaPanel.tsx  EntryEditorSidebar.tsx  EntryImageAddModal.tsx  EntryImageLightbox.css  EntryImageLightbox.tsx  EntryTypeCreator.css  EntryTypeCreator.tsx  HighLightTagItem.css  HighLightTagItem.tsx  MapShapeEditorDemo.css  MapShapeEditorDemo.tsx  ProjectCreator.css  ProjectCreator.tsx  ProjectRelationGraph.css  ProjectRelationGraph.tsx  ProjectTimeline.css  ProjectTimeline.tsx  RelationDemo.css  RelationDemo.tsx  SnapshotPanel.css  SnapshotPanel.tsx  TagCreator.css  TagCreator.tsx  TimelineDemo.css  UploadPlugin.tsx  WorldMapOverlay.tsx  (+2 more)
src/components/hooks/: useUndoRedo.ts
src/components/layout/: DockableSidePanel.css  DockableSidePanel.tsx
src/components/project-editor/: CategoryView.tsx  EntryRelationCreator.tsx  EntryRelationEditor.css  EntryRelationViewer.tsx  EntryTypeIcon.tsx  ProjectCoverPickerModal.tsx  ProjectOverview.tsx  WorldMapPanel.tsx  index.ts  mapStyleUtils.ts
src/components/utils/: characterVoice.ts  entryCommon.ts  entryImage.ts  entryRelation.ts  entryTag.ts  ttsVoice.ts
src/contexts/: AiContext.tsx  AiContextTypes.ts  AiControllerTypes.ts
src/features/about/: AboutSection.css  AboutSection.tsx  LicenseModal.css  LicenseModal.tsx  licenseContent.ts
src/features/ai-chat/: useAIChatPanel.tsx
src/features/help/: useHelpPanel.tsx
src/hooks/: useAiController.ts  useAiSession.ts
src/i18n/: index.ts
src/pages/: Idea.css  Idea.tsx  Plugins.css  Plugins.tsx  ProjectEditor.css  ProjectEditor.tsx  ProjectList.css  ProjectList.tsx  Settings.css  Settings.tsx  useIdeaPanel.tsx
src/shared/: devPreview.ts  logger.ts
todo/: MOBILE-01.md  UI-01.md
(+270 files in other folders)
