[package]
name = "FlowCloudAI"
version = "0.1.1"
description = "A Tauri-based desktop app for creative writing and knowledge management with AI assistance."
authors = ["flowcloudai"]
license = "MIT"
repository = "https://github.com/FlowCloudAI/Local_App/"
edition = "2024"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = true

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[features]
default = ["document-office-oxide", "document-pdf-extract"]
document-office-oxide = ["dep:office_oxide"]
document-pdf-extract = ["dep:pdf-extract"]

[dependencies]
# ── 核心框架 ──
tauri = { version = "2", features = [] }
tokio = { version = "1.50", features = ["rt-multi-thread", "sync", "time", "fs"] }
futures = "0.3"

# ── Tauri 插件 ──
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

# ── 序列化 ──
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", default-features = false, features = ["sqlite", "runtime-tokio"] }

# ── 日志与错误 ──
log = "0.4"
anyhow = "1"

# ── 本地路径依赖 ──
flowcloudai_client = { path = "../../core_ai_client" }

# ── 网络与 HTTP ──
reqwest = { version = "0.13.2", features = ["json", "multipart"] }

# ── 数据解析 ──
scraper = "0.26.0"
ego-tree = "0.11.0"
htmd = "0.5"
office_oxide = { version = "0.1.2", optional = true }
pdf-extract = { version = "0.10.0", optional = true }

# ── 编码与压缩 ──
base64 = "0.22.1"
urlencoding = "2"
encoding_rs = "0.8"
zip = { version = "8", default-features = false, features = ["deflate"] }
csv = "1"
sha2 = "0.10"
mime_guess = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif", "bmp"] }

# ── 工具库 ──
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
semver = "1"
keyring = { version = "3", features = ["windows-native", "linux-native"] }
moka = { version = "0.12", features = ["future"] }
tera = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
worldflow_core = { path = "../../core_world_data" }
git2 = { version = "0.20.4", default-features = false, features = ["vendored-libgit2"] }

[target.'cfg(target_os = "android")'.dependencies]
worldflow_core = { path = "../../core_world_data", default-features = false, features = ["sqlite"] }

[target.'cfg(windows)'.dependencies]
webview2-com = "0.39"
windows = "0.62"

[dev-dependencies]
tempfile = "3"
